envoy.yaml

#
# THIS FILE IS GENERATED AUTOMATICALLY AND SHOULD NOT BE EDITED DIRECTLY
#
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
  - name: https_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 9443 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: dolthubapi
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: dolthubapi_service
              cors:
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
                max_age: "1728000"
                expose_headers: grpc-status,grpc-message
          http_filters:
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router
          access_log:
          - name: envoy.access_loggers.stream
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                text_format_source:
                  inline_string: >
                    [%START_TIME%]
                    "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
                    %RESPONSE_CODE% %GRPC_STATUS% %RESPONSE_FLAGS%
                    %BYTES_RECEIVED% %BYTES_SENT%
                    %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                    "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                    "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%"
                    "%UPSTREAM_HOST%"
                    "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
  - name: dolthub_graphql_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: dolthub_graphql
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: [ "*" ]
              routes:
              - match:
                  prefix: "/graphql"
                route:
                  cluster: graphql_service
              - match:
                  prefix: "/"
                route:
                  cluster: dolthub_service
          http_filters:
          - name: envoy.filters.http.router
          access_log:
          - name: envoy.access_loggers.stream
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                text_format_source:
                  inline_string: >
                    [%START_TIME%]
                    "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
                    %RESPONSE_CODE% %GRPC_STATUS% %RESPONSE_FLAGS%
                    %BYTES_RECEIVED% %BYTES_SENT%
                    %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                    "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                    "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%"
                    "%UPSTREAM_HOST%"
                    "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
  - name: file_service_api_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 4321 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: file_service_api
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: [ "*" ]
              routes:
              - match:
                  prefix: "/users"
                route:
                  cluster: fileapi_service
              cors:
                allow_origin_string_match:
                - exact: "https://doltlabui.local.deviceatlas.com"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,dolthubapi-uploader-id,content-md5
                allow_credentials: true
                max_age: "1728000"
          http_filters:
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router
          access_log:
          - name: envoy.access_loggers.stream
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                text_format_source:
                  inline_string: >
                    [%START_TIME%]
                    "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
                    %RESPONSE_CODE% %GRPC_STATUS% %RESPONSE_FLAGS%
                    %BYTES_RECEIVED% %BYTES_SENT%
                    %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                    "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                    "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%"
                    "%UPSTREAM_HOST%"
                    "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
  - name: outbound_graphql_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 10080 }
    traffic_direction: outbound
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: outbound_graphql
          route_config:
            virtual_hosts:
            - name: graphql
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: graphql_service
          http_filters:
          - name: envoy.filters.http.router
          access_log:
          - name: envoy.access_loggers.stream
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                text_format_source:
                  inline_string: >
                    [%START_TIME%]
                    "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
                    %RESPONSE_CODE% %GRPC_STATUS% %RESPONSE_FLAGS%
                    %BYTES_RECEIVED% %BYTES_SENT%
                    %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                    "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                    "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%"
                    "%UPSTREAM_HOST%"
                    "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
  - name: outbound_grpc_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 9480 }
    filter_chains:
    - filters:
      - name: envoy.filters.netowrk.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: outbound_grpc
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                  headers:
                  - name: ":authority"
                    exact_match: "doltremoteapi"
                  grpc: {}
                route:
                  cluster: doltremoteapi_service
                  max_stream_duration:
                    grpc_timeout_header_max: 15s
                request_headers_to_add:
                - header:
                    key: "x-doltremoteapi-is-authorized"
                    value: "true"
              - match:
                  prefix: "/"
                  headers:
                  - name: ":authority"
                    exact_match: "doltremoteapi-internal"
                  grpc: {}
                route:
                  cluster: doltremoteapi_service
                  max_stream_duration:
                    grpc_timeout_header_max: 600s
                  timeout: 600s
              - match:
                  prefix: "/"
                  headers:
                  - name: ":authority"
                    exact_match: "dolthubapi"
                  grpc: {}
                route:
                  cluster: dolthubapi_service
              - match:
                  prefix: "/"
                  headers:
                  - name: ":authority"
                    exact_match: "doltremoteauth"
                  grpc: {}
                route:
                  cluster: dolthubapi_service
          http_filters:
          - name: envoy.filters.http.router
          access_log:
          - name: envoy.access_loggers.stream
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                text_format_source:
                  inline_string: >
                    [%START_TIME%]
                    "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
                    %RESPONSE_CODE% %GRPC_STATUS% %RESPONSE_FLAGS%
                    %BYTES_RECEIVED% %BYTES_SENT%
                    %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                    "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                    "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%"
                    "%UPSTREAM_HOST%"
                    "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
  clusters:
  - name: dolthubapi_service
    connect_timeout: 0.25s
    type: strict_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: dolthubapi_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "doltlabapi"
                port_value: 60051
  - name: doltremoteapi_service
    connect_timeout: 0.25s
    type: strict_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: doltremoteapi_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "doltlabremoteapi"
                port_value: 50051
  - name: graphql_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: graphql_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "doltlabgraphql"
                port_value: 9000
  - name: dolthub_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: dolthub_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "doltlabui"
                port_value: 3000
  - name: fileapi_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: fileapi_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "doltlabfileserviceapi"
                port_value: 60055
